fixed alignment problem

--- a/public/setup/css/setup.css
+++ b/public/setup/css/setup.css
@@ -568,9 +568,12 @@ input[type="text"] {
 }
 
 .setup-content .list-group-item{
-    padding: 20px;
+    padding: 20px 20px 20px 60px;
 }
-
+.radio-content{
+    position: absolute;
+    left:12px;
+}
 .font-awesome-radio-container{
     padding-left: 10px;
     padding-right: 15px;
